Added one more slider in GUI

--- a/assistive_teleop/www/hz_tab_interface.html
+++ b/assistive_teleop/www/hz_tab_interface.html
@@ -243,7 +243,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <button class="centered man_task_cont" id='man_task_Both' style="font-size:120%">Both</button>
+                              <button class="centered man_task_cont" id='man_task_Init' style="font-size:120%">Init</button>
                             </td>
                           </tr>
                         </table>
@@ -301,18 +301,34 @@
                     </tr>
                     <tr>
                       <td></td>
-                      <th colspan='3' style="text-align:center">Anomaly Detection Sensitivity</th>
-
+                      <th colspan='3'
+                      style="text-align:center">Scooping Anomaly Detection Sensitivity</th>
                     </tr>
                     <tr>
                       <td colspan='1'>
-                        <button class="centered man_task_cont" id='ad_sense_min' style="font-size:80%;">Down</button>
+                        <button class="centered man_task_cont" id='ad_scooping_sense_min' style="font-size:80%;">Down</button>
                       </td>
                       <td colspan='3'>
-                        <div class="slider" id="ad_slider"></div>
+                        <div class="slider" id="ad_scooping_slider"></div>
                       </td>
                       <td colspan='1'>
-                        <button  class="centered man_task_cont" id='ad_sense_max' style="font-size:80%;">Up</button>
+                        <button  class="centered man_task_cont" id='ad_scooping_sense_max' style="font-size:80%;">Up</button>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <th colspan='3'
+                      style="text-align:center">Feeding Anomaly Detection Sensitivity</th>
+                    </tr>
+                    <tr>
+                      <td colspan='1'>
+                        <button class="centered man_task_cont" id='ad_feeding_sense_min' style="font-size:80%;">Down</button>
+                      </td>
+                      <td colspan='3'>
+                        <div class="slider" id="ad_feeding_slider"></div>
+                      </td>
+                      <td colspan='1'>
+                        <button  class="centered man_task_cont" id='ad_feeding_sense_max' style="font-size:80%;">Up</button>
                       </td>
                     </tr>
                   </table>
