--- a/assistive_teleop/www/hz_tab_interface_indigo.html
+++ b/assistive_teleop/www/hz_tab_interface_indigo.html
@@ -505,7 +505,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <button class="centered man_task_cont" id='man_task_Both' style="font-size:150%">Both</button>
+                              <button class="centered man_task_cont" id='man_task_Init' style="font-size:150%">Init</button>
                             </td>
                           </tr>
                         </table>
