--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -126,6 +126,7 @@
             <input class="menu-item" id="r-posrot-rot" type="radio" name="posrot-radio">
             <label for="r-posrot-rot">Wrist Rotation</label>
         </div>
+        <div class="tuck-side r-arm-ctrl" style="display:none">Tuck Aside</div>
 
         <!-- Left Arm Controls -->
         <div class="pick-and-place l-arm-ctrl" style="display:none"></div>
@@ -137,6 +138,7 @@
             <input class="menu-item" id="l-posrot-rot" type="radio" name="posrot-radio">
             <label for="l-posrot-rot">Wrist Rotation</label>
         </div>
+        <div class="tuck-side l-arm-ctrl" style="display:none">Tuck Aside</div>
 
         <!-- Step size controls -->
         <div id="speedOptions" class="arm-ctrl">
@@ -182,10 +184,6 @@
      <img id="shortIcon" src="./css/icons/short.png"></img>
      <div id="torsoSlider"></div>
      <!-- divs for arm controls -->
-<!--         <img id="rightFocusPoint" class="focus-point r-arm-ctrl" src="./css/icons/focus-point.png"></img>
-     <img id="leftFocusPoint" class="focus-point l-ARM-Ctrl" src="./css/icons/focus-point.png"></img>
-     <div id="depthMaskLeft" class="depth-mask arm-ctrl" ></div>
-     <div id="depthMaskRight" class="depth-mask arm-ctrl" ></div>-->
      <div id='armCtrlContainer' class="ctrlContainer arm-ctrl" style="display:none">
          <!--<div class="slider"></div>-->
          <div id="ctrl-ring" class="default">
@@ -213,7 +211,6 @@
         <div class="gripper-slider"></div>
         <input type="checkbox" class="release" id="release-left"/>
         <label for="release-left">Release on contact</label>
-<!--        <div class="grab">Grab</div>-->
      </div>
  </div>
 
