adding old tucking server to driving interface

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -97,6 +97,7 @@
      <div id="controls">
         <h3>Controls</h3>
         <!-- Driving Controls -->
+        <div class="tuck-driving drive-ctrl" style="display:none">Tuck Arms</div>
         <svg id="drive-dir-icon" class="drive-ctrl" viewBox="-2 0 36 36" version="1.1" xmlns="http://www.w3.org/2000/svg"></svg>
         <h4 class="drive-ctrl" style="display:none">Click on video to drive.</h4>
 
