adding buttons for forearm cameras

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -120,6 +120,7 @@
         <!-- Right Arm Controls -->
         <div class="pick-and-place r-arm-ctrl" style="display:none"></div>
         <div class="camera-swing r-arm-ctrl" style="display:none">3D Peek</div>
+        <div class="arm-cam r-arm-ctrl" style="display:none">Forearm Camera</div>
         <div id="r-posrot-set" class="r-arm-ctrl posrot-set" style="display:none">
             <h4>Position/Rotation</h4>
             <input class="menu-item" id="r-posrot-pos" type="radio" name="posrot-radio" checked="checked">
@@ -132,6 +133,7 @@
         <!-- Left Arm Controls -->
         <div class="pick-and-place l-arm-ctrl" style="display:none"></div>
         <div class="camera-swing l-arm-ctrl" style="display:none">3D Peek</div>
+        <div class="arm-cam l-arm-ctrl" style="display:none">Forearm Camera</div>
         <div id="l-posrot-set" class="l-arm-ctrl posrot-set" style="display:none">
             <h4>Position/Rotation</h4>
             <input class="menu-item" id="l-posrot-pos" type="radio" name="posrot-radio" checked="checked">
