modified:   hz_tab_interface.html 	modified:   js/man_Task.js

--- a/assistive_teleop/www/hz_tab_interface.html
+++ b/assistive_teleop/www/hz_tab_interface.html
@@ -335,6 +335,27 @@
                       </td>
                     </tr>
                     <tr>
+                      <td>
+                        <p>
+                          success ratio with <br>
+                          most recent 4 data
+                        </p>
+                      </td>
+                      <td>
+                        <label id="ad_scooping_result_1" style="text-align:center">  0.0% </label>
+                      </td>
+                      <td>
+                        <p>
+                          success ratio with <br>
+                          most recent 4 data
+                        </p>
+                      </td>
+                      <td>
+                        <label id="ad_scooping_result_2" style="text-align:center"> 0.0% </label>
+                      </td>
+                      <td></td>
+                    </tr>
+                    <tr>
                       <td></td>
                       <th colspan='3'
                       style="text-align:center">Feeding Anomaly Detection Sensitivity</th>
@@ -349,6 +370,27 @@
                       <td colspan='1'>
                         <button  class="centered man_task_cont" id='ad_feeding_sense_max' style="font-size:80%;">Up</button>
                       </td>
+                    </tr>
+                    <tr>
+                      <td> 
+                        <p>
+                          success ratio with <br>
+                          most recent 4 data
+                        </p>
+                      </td>
+                      <td>
+                        <label id="ad_feeding_result_1" style="text-align:center">  0.0% </label>
+                      </td>
+                      <td>
+                        <p>
+                          success ratio with <br>
+                          most recent 4 data
+                        </p>
+                      </td>
+                      <td>
+                        <label id="ad_feeding_result_2" style="text-align:center"> 0.0% </label>
+                      </td>
+                      <td></td>
                     </tr>
                   </table>
                 </div>
