modified:   ../hz_tab_interface.html 	modified:   man_Task.js

--- a/assistive_teleop/www/hz_tab_interface.html
+++ b/assistive_teleop/www/hz_tab_interface.html
@@ -319,6 +319,29 @@
                       </td>
                     </tr>
                     <tr>
+                      <td colspan='5'>
+                        <table style="width:100%">
+                          <tr>
+                            <td>
+                              please select feeding distance
+                            </td>
+                            <td>
+                              <select id="man_task_Feeding_dist">
+                                <option value="2"> 2cm </option>
+                                <option value="3"> 3cm </option>
+                                <option value="4"> 4cm </option>
+                                <option value="5" selected> 5cm </option>
+                                <option value="6"> 6cm </option>
+                                <option value="7"> 7cm </option>
+                                <option value="8"> 8cm </option>
+                                <option value="9"> 9cm </option>
+                              </select>
+                            </td>
+                          </tr>
+                      </table>
+                      </td>
+                    </tr>
+                    <tr>
                       <td></td>
                       <th colspan='3'
                       style="text-align:center">Scooping Anomaly Detection Sensitivity</th>
@@ -335,25 +358,30 @@
                       </td>
                     </tr>
                     <tr>
-                      <td>
-                        <p>
-                          success ratio with <br>
-                          most recent 4 data
-                        </p>
+                      <td colspan='5'>
+                        <table style="width:100%">
+                          <tr>
+                            <td colspan='1'>
+                              <p>
+                                success ratio with <br>
+                                most recent 4 data
+                              </p>
+                            </td>
+                            <td colspan='1'>
+                              <label id="ad_scooping_result_1" style="text-align:center">  0.0% </label>
+                            </td>
+                            <td colspan='1'>
+                              <p>
+                                success ratio with <br>
+                                most recent 4 data
+                              </p>
+                            </td>
+                            <td colspan='1'>
+                              <label id="ad_scooping_result_2" style="text-align:center"> 0.0% </label>
+                            </td>
+                          </tr>
+                        </table>
                       </td>
-                      <td>
-                        <label id="ad_scooping_result_1" style="text-align:center">  0.0% </label>
-                      </td>
-                      <td>
-                        <p>
-                          success ratio with <br>
-                          most recent 4 data
-                        </p>
-                      </td>
-                      <td>
-                        <label id="ad_scooping_result_2" style="text-align:center"> 0.0% </label>
-                      </td>
-                      <td></td>
                     </tr>
                     <tr>
                       <td></td>
@@ -372,25 +400,30 @@
                       </td>
                     </tr>
                     <tr>
-                      <td> 
-                        <p>
-                          success ratio with <br>
-                          most recent 4 data
-                        </p>
+                      <td colspan='5'>
+                        <table style="width:100%">
+                          <tr>
+                            <td> 
+                              <p>
+                                success ratio with <br>
+                                most recent 4 data
+                              </p>
+                            </td>
+                            <td>
+                              <label id="ad_feeding_result_1" style="text-align:center">  0.0% </label>
+                            </td>
+                            <td>
+                              <p>
+                                success ratio with <br>
+                                most recent 4 data
+                              </p>
+                            </td>
+                            <td>
+                              <label id="ad_feeding_result_2" style="text-align:center"> 0.0% </label>
+                            </td>
+                          </tr>
+                        </table>
                       </td>
-                      <td>
-                        <label id="ad_feeding_result_1" style="text-align:center">  0.0% </label>
-                      </td>
-                      <td>
-                        <p>
-                          success ratio with <br>
-                          most recent 4 data
-                        </p>
-                      </td>
-                      <td>
-                        <label id="ad_feeding_result_2" style="text-align:center"> 0.0% </label>
-                      </td>
-                      <td></td>
                     </tr>
                   </table>
                 </div>
