--- a/assistive_teleop/www/hz_tab_interface.html
+++ b/assistive_teleop/www/hz_tab_interface.html
@@ -262,7 +262,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <button class="centered man_task_cont" id='man_task_Init' style="font-size:120%">Init</button>
+                              <button class="centered man_task_cont" id='man_task_Clean' style="font-size:120%">Clean Spoon</button>
                             </td>
                           </tr>
                         </table>
