--- a/assistive_teleop/www/hz_tab_interface.html
+++ b/assistive_teleop/www/hz_tab_interface.html
@@ -298,7 +298,7 @@
                       <td>
                         <table id="man_task_feedback">
                           <tr>
-                            <th style="text-align:center">3.Select a Feedback</th>
+                            <th style="text-align:center">3.Successful feed?</th>
                           </tr>
                           <tr>
                             <td>
@@ -316,29 +316,6 @@
                             </td>
                           </tr>
                         </table>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td colspan='5'>
-                        <table style="width:100%">
-                          <tr>
-                            <td>
-                              please select feeding distance
-                            </td>
-                            <td>
-                              <select id="man_task_Feeding_dist">
-                                <option value="2"> 2cm </option>
-                                <option value="3"> 3cm </option>
-                                <option value="4"> 4cm </option>
-                                <option value="5" selected> 5cm </option>
-                                <option value="6"> 6cm </option>
-                                <option value="7"> 7cm </option>
-                                <option value="8"> 8cm </option>
-                                <option value="9"> 9cm </option>
-                              </select>
-                            </td>
-                          </tr>
-                      </table>
                       </td>
                     </tr>
                     <tr>
@@ -361,7 +338,7 @@
                       <td colspan='5'>
                         <table style="width:100%">
                           <tr>
-                            <td colspan='1'>
+                            <!--td colspan='1'>
                               <p>
                                 success ratio with <br>
                                 most recent 4 data
@@ -369,14 +346,15 @@
                             </td>
                             <td colspan='1'>
                               <label id="ad_scooping_result_1" style="text-align:center">  0.0% </label>
-                            </td>
-                            <td colspan='1'>
+                            </td-->
+                            <td colspan='1' style="width:50%;text-align:right">
                               <p>
                                 success ratio with <br>
-                                most recent 4 data
+                                most recent 10 data
                               </p>
                             </td>
-                            <td colspan='1'>
+                            <td colspan='1' style="width:50%;font-size:200%;text-align:left">
+                              :
                               <label id="ad_scooping_result_2" style="text-align:center"> 0.0% </label>
                             </td>
                           </tr>
@@ -403,7 +381,7 @@
                       <td colspan='5'>
                         <table style="width:100%">
                           <tr>
-                            <td> 
+                            <!--td> 
                               <p>
                                 success ratio with <br>
                                 most recent 4 data
@@ -411,18 +389,44 @@
                             </td>
                             <td>
                               <label id="ad_feeding_result_1" style="text-align:center">  0.0% </label>
-                            </td>
-                            <td>
+                            </td-->
+                            <td colspan='1' style="width:50%;text-align:right">
                               <p>
                                 success ratio with <br>
-                                most recent 4 data
+                                most recent 10 data
                               </p>
                             </td>
-                            <td>
-                              <label id="ad_feeding_result_2" style="text-align:center"> 0.0% </label>
+                            <td colspan='1' style="width:50%;text-align:left;font-size:200%">
+                              :
+                              <label id="ad_feeding_result_2"> 0.0% </label>
                             </td>
                           </tr>
                         </table>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td colspan='5'>
+                        <table style="width:100%;text-align:center">
+                          <tr>
+                            <td colspan='1'>
+                              please select feeding distance
+                            </td>
+                          </tr>
+                          <tr>
+                            <td colspan='1'>
+                              <select id="man_task_Feeding_dist">
+                                <option value="2"> 2cm </option>
+                                <option value="3"> 3cm </option>
+                                <option value="4"> 4cm </option>
+                                <option value="5" selected> 5cm </option>
+                                <option value="6"> 6cm </option>
+                                <option value="7"> 7cm </option>
+                                <option value="8"> 8cm </option>
+                                <option value="9"> 9cm </option>
+                              </select>
+                            </td>
+                          </tr>
+                      </table>
                       </td>
                     </tr>
                   </table>
