modified:   ../../../assistive_teleop/www/hz_tab_interface.html 	modified:   ../../../assistive_teleop/www/js/man_Task.js 	modified:   ../../params/anomaly_detection_feeding.yaml 	modified:   ../../params/anomaly_detection_scooping.yaml

--- a/assistive_teleop/www/hz_tab_interface.html
+++ b/assistive_teleop/www/hz_tab_interface.html
@@ -298,7 +298,7 @@
                       <td>
                         <table id="man_task_feedback">
                           <tr>
-                            <th style="text-align:center">3.Successful feed?</th>
+                            <th style="text-align:center">3.Select a Feedback</th>
                           </tr>
                           <tr>
                             <td>
