--- a/assistive_teleop/www/hz_tab_interface.html
+++ b/assistive_teleop/www/hz_tab_interface.html
@@ -42,6 +42,29 @@
 </head>
 
 <body onload="assistive_teleop.start()" ondragstart="return false;" ondrop="return false;">
+  <div id="fullscreenOverlay2" style="width:100%;height:100%;z-index:10;position:fixed;overflow-x:hidden;background-color:black;opacity:0.6;top:0;left:0;color:white">
+    <div style="width:100%;top:30%;z-index:10;position:fixed;overflow-x:hidden;background-color:black;text-align:center">
+      <label id="fullscreen_anomaly_paragraph" style="font-size:36px;text-align:center">
+        Anomaly was detected
+      </label>
+      <p hidden id="fullscreen_scooping_paragraph" style="font-size:36px;text-align:center"> 
+        Did anomaly <br>
+        (no yogurt scooped and/or unexpected collision)<br>
+        occur? <br>
+      </p>
+      <p id="fullscreen_feeding_paragraph" style="font-size:36px;text-align:center"> 
+        Did anomaly <br>
+        (didn't get yogurt in mouth, robot not moving out of mouth<br>
+        and/or unexpected collision) <br>
+        occur? <br>
+      </p>
+      <div style="position:relative;left:40%;width:20%">
+        <button class="centered man_task_cont" id='man_task_success' style="font-size:120%; opacity: 1.0">Yes</button>
+        <button class="centered man_task_cont" id='man_task_Fail' style="font-size:120%; opacity: 1.0">No</button>
+        <button class="centered man_task_cont" id='man_task_Skip' style="font-size:120%; opacity: 1.0">Skip</button>
+      </div>
+    </div>
+  </div>
   <div id="fullscreenOverlay" style="width:0;z-index:10;position:fixed;overflow-x:hidden;background-color:black;opacity:0.6;top:0;left:0">
     <div style="width:100%;top:49%;left:0;position:relative;text-align:center;color:white;font-size:60px">
       <label id="bigStop">Press anywhere to stop</label>    
