--- a/assistive_teleop/www/hz_tab_interface.html
+++ b/assistive_teleop/www/hz_tab_interface.html
@@ -42,17 +42,23 @@
 </head>
 
 <body onload="assistive_teleop.start()" ondragstart="return false;" ondrop="return false;">
-  <div id="fullscreenOverlay2" style="width:0;z-index:10;position:fixed;overflow-x:hidden;background-color:black;opacity:0.6;top:0;left:0">
-    <div style="top:40%;left:20%;width:60%;position:relative;color:white;font-size:40px">
+  <div id="fullscreenOverlay2" style="width:0;z-index:10;position:fixed;overflow-x:hidden;background-color:black;opacity:1.0;top:0;left:0">
+    <div style="top:30%;left:20%;width:60%;position:relative;color:white;font-size:40px">
+      <div style="text-align:center">
+        <label style="font-size:120%">
+          Please provide feedback <br>
+            
+        </label>
+      </div>
       <table id="scooping_questions" style="width:100%;table-layout:fixed">
         <tr>
           <td colspan='3'>
             Did robot scoop yogurt?
           </td>
-          <td id="scooping_questions1_yes" onclick="manTask_yes(this.id)" value="false">
+          <td style="text-align:center" id="scooping_questions1_yes" onclick="manTask_yes(this.id)" value="false">
             <label> yes </label>
           </td>
-          <td  id="scooping_questions1_no" onclick="manTask_no(this.id)" value="false" >
+          <td style="text-align:center" id="scooping_questions1_no" onclick="manTask_no(this.id)" value="false" >
             <label> no </label>
           </td>
         </tr>
@@ -60,11 +66,11 @@
           <td colspan='3'>
             Did robot collided with something?
           </td>
-          <td id="scooping_questions2_yes" onclick="manTask_yes(this.id)" value="false">
-            <label  > yes </label>
+          <td style="text-align:center" id="scooping_questions2_yes" onclick="manTask_yes(this.id)" value="false">
+            <label> yes </label>
           </td>
-          <td id="scooping_questions2_no" onclick="manTask_no(this.id)">
-            <label > no </label>
+          <td style="text-align:center" id="scooping_questions2_no" onclick="manTask_no(this.id)" value="false">
+            <label> no </label>
           </td>
           </tr>
       </table>
@@ -73,25 +79,27 @@
           <td colspan='3'>
               Did robot fed you a yogurt?
           </td>
-          <td id="feeding_questions1_yes" onclick="manTask_yes(this.id)" value="false" >
+          <td style="text-align:center" id="feeding_questions1_yes" onclick="manTask_yes(this.id)" value="false">
             <label> yes </label>
           </td>
-          <td  id="feeding_questions1_no" onclick="manTask_no(this.id)">
+          <td style="text-align:center" id="feeding_questions1_no" onclick="manTask_no(this.id)" value="false">
             <label> no </label> 
           </td>
           </tr>
         <tr>
           <td colspan='3'>
-            Did robot collided with something?
+            Did robot collide with something?
           </td>
-          <td>
-            <label id="feeding_questions2_yes" onclick="manTask_yes(this.id)" value="false" > yes </label>
+          <td style="text-align:center" id="feeding_questions2_yes" onclick="manTask_yes(this.id)" value="false">
+            <label> yes </label>
           </td>
-          <td>
-            <label id="feeding_questions2_no" onclick="manTask_no(this.id)"> no </label> 
+          <td style="text-align:center" id="feeding_questions2_no" onclick="manTask_no(this.id)" value="false">
+            <label> no </label> 
           </td>
         </tr>
       </table>
+      <p>
+      </p>
       <table style="width:100%">
         <tr>
           <td>
