--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -35,7 +35,6 @@
 
   <script type="text/javascript" src="js/init.js"></script>
   <script type="text/javascript" src="js/log.js"></script>
-  <script type="text/javascript" src="js/datalogging.js"></script>
   <script type="text/javascript" src="js/undo.js"></script>
   <script type="text/javascript" src="js/connection_monitor.js"></script>
   <script type="text/javascript" src="js/battery_monitor.js"></script>
@@ -51,6 +50,7 @@
   <script type="text/javascript" src="js/tasks/domains/pick.js"></script>
   <script type="text/javascript" src="js/tasks/domains/place.js"></script>
   <script type="text/javascript" src="js/tasks/domains/pick-and-place.js"></script>
+  <script type="text/javascript" src="js/tasks/domains/wiping-mouth-adl.js"></script>
   <script type="text/javascript" src="js/tasks/publish-location.js"></script>
   <script type="text/javascript" src="js/tasks/param-location.js"></script>
   <script type="text/javascript" src="js/tasks/smach-display.js"></script>
@@ -93,6 +93,10 @@
      <div id="main-menu">
         <div id="undo"><p>Undo</p></div>
         <h3>Main Menu</h3>
+     </div>
+     <div id="task-menu">
+        <h3>Task Menu</h3>
+        <div id="wiping-mouth-adl-button">Wipe Mouth</div>
      </div>
      <div id="controls">
         <h3>Controls</h3>
