modified:   hz_tab_interface.html 	modified:   js/man_Task.js 	modified:   ../../hrl_manipulation_task/launch/scooping_feeding/hkim.launch

--- a/assistive_teleop/www/hz_tab_interface.html
+++ b/assistive_teleop/www/hz_tab_interface.html
@@ -52,7 +52,7 @@
       <table id="scooping_questions" style="width:100%;table-layout:fixed">
         <tr>
           <td colspan='3'>
-            Did robot scoop yogurt?
+            Did the robot scooped yogurt?
           </td>
           <td style="text-align:center" id="scooping_questions1_yes" onclick="manTask_yes(this.id)" value="false">
             <label> yes </label>
@@ -63,7 +63,7 @@
         </tr>
         <tr>
           <td colspan='3'>
-            Did robot collided with something?
+            Did the robot collided with something?
           </td>
           <td style="text-align:center" id="scooping_questions2_yes" onclick="manTask_yes(this.id)" value="false">
             <label> yes </label>
@@ -74,7 +74,8 @@
         </tr>
         <tr>
           <td colspan='3'>
-            Was there unexpected noise between robot scooping?
+            Was there an unexpected noise while robot was scooping? <br>
+            (exclude noise from robot)
           </td>
           <td style="text-align:center" id="scooping_questions3_yes" onclick="manTask_yes(this.id)" value="false">
             <label> yes </label>
@@ -87,7 +88,7 @@
       <table id="feeding_questions" style="width:100%;table-layout:fixed">
         <tr>
           <td colspan='3'>
-              Did robot fed you a yogurt?
+              Did the robot fed you a yogurt?
           </td>
           <td style="text-align:center" id="feeding_questions1_yes" onclick="manTask_yes(this.id)" value="false">
             <label> yes </label>
@@ -98,7 +99,7 @@
         </tr>
         <tr>
           <td colspan='3'>
-            Did robot collide with something?
+            Did the robot collided with something?
           </td>
           <td style="text-align:center" id="feeding_questions2_yes" onclick="manTask_yes(this.id)" value="false">
             <label> yes </label>
@@ -109,7 +110,8 @@
         </tr>
         <tr>
           <td colspan='3'>
-            Was there an unexpected noise when robot fed you?
+            Was there an unexpected noise when robot fed you?<br>
+            (exclude noise from robot)
           </td>
           <td style="text-align:center" id="feeding_questions3_yes" onclick="manTask_yes(this.id)" value="false">
             <label> yes </label>
