Updated sentence structure within the interface.

--- a/assistive_teleop/www/hz_tab_interface.html
+++ b/assistive_teleop/www/hz_tab_interface.html
@@ -52,7 +52,7 @@
       <table id="scooping_questions" style="width:100%;table-layout:fixed">
         <tr>
           <td colspan='3'>
-            Did the robot scooped yogurt?
+            Did the robot scoop yogurt?
           </td>
           <td style="text-align:center" id="scooping_questions1_yes" onclick="manTask_yes(this.id)" value="false">
             <label> yes </label>
@@ -63,7 +63,7 @@
         </tr>
         <tr>
           <td colspan='3'>
-            Did the robot collided with something?
+            Did any unexpected collisions occur?
           </td>
           <td style="text-align:center" id="scooping_questions2_yes" onclick="manTask_yes(this.id)" value="false">
             <label> yes </label>
@@ -74,8 +74,8 @@
         </tr>
         <tr>
           <td colspan='3'>
-            Was there an unexpected noise while robot was scooping? <br>
-            (exclude noise from robot)
+            Was there unexpected noise during scooping? <br>
+            (excluding noise from the robot)
           </td>
           <td style="text-align:center" id="scooping_questions3_yes" onclick="manTask_yes(this.id)" value="false">
             <label> yes </label>
@@ -88,7 +88,7 @@
       <table id="feeding_questions" style="width:100%;table-layout:fixed">
         <tr>
           <td colspan='3'>
-              Did the robot fed you a yogurt?
+              Did the robot feed you yogurt?
           </td>
           <td style="text-align:center" id="feeding_questions1_yes" onclick="manTask_yes(this.id)" value="false">
             <label> yes </label>
@@ -99,7 +99,7 @@
         </tr>
         <tr>
           <td colspan='3'>
-            Did the robot collided with something?
+            Did the robot cause any uncomfortable collisions?
           </td>
           <td style="text-align:center" id="feeding_questions2_yes" onclick="manTask_yes(this.id)" value="false">
             <label> yes </label>
@@ -110,8 +110,8 @@
         </tr>
         <tr>
           <td colspan='3'>
-            Was there an unexpected noise when robot fed you?<br>
-            (exclude noise from robot)
+            Was there any unexpected noise during feeding? <br>
+            (excluding noise from robot)
           </td>
           <td style="text-align:center" id="feeding_questions3_yes" onclick="manTask_yes(this.id)" value="false">
             <label> yes </label>
