--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -51,6 +51,7 @@
   <script type="text/javascript" src="js/tasks/domains/place.js"></script>
   <script type="text/javascript" src="js/tasks/domains/pick-and-place.js"></script>
   <script type="text/javascript" src="js/tasks/domains/wiping-mouth-adl.js"></script>
+  <script type="text/javascript" src="js/tasks/domains/scratching-knee-adl.js"></script>
   <script type="text/javascript" src="js/tasks/publish-location.js"></script>
   <script type="text/javascript" src="js/tasks/param-location.js"></script>
   <script type="text/javascript" src="js/tasks/smach-display.js"></script>
@@ -97,6 +98,7 @@
      <div id="task-menu">
         <h3>Task Menu</h3>
         <div id="wiping-mouth-adl-button">Wipe Mouth</div>
+        <div id="scratching-knee-adl-button">Scratch Left Knee</div>
      </div>
      <div id="controls">
         <h3>Controls</h3>
