adding realtime base selection buttons under looking task

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -48,6 +48,7 @@
   <script type="text/javascript" src="js/tasks/ee_rotation.js"></script>
   <script type="text/javascript" src="js/tasks/ee_display.js"></script>
   <script type="text/javascript" src="js/tasks/ee_focus.js"></script>
+  <script type="text/javascript" src="js/tasks/realtime_base_selection.js"></script>
   <script type="text/javascript" src="js/tasks/domains/pick.js"></script>
   <script type="text/javascript" src="js/tasks/domains/place.js"></script>
   <script type="text/javascript" src="js/tasks/domains/pick-and-place.js"></script>
@@ -96,6 +97,9 @@
      </div>
      <div id="controls">
         <h3>Controls</h3>
+        <!-- Lookinging Controls -->
+        <div class="look-ctrl rtbs left">Approach (Left Arm)</div>
+        <div class="look-ctrl rtbs right">Approach (Right Arm)</div>
         <!-- Driving Controls -->
         <div class="tuck-driving drive-ctrl" style="display:none">Tuck Arms</div>
         <svg id="drive-dir-icon" class="drive-ctrl" viewBox="-2 0 36 36" version="1.1" xmlns="http://www.w3.org/2000/svg"></svg>
