--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -96,6 +96,9 @@
      </div>
      <div id="controls">
         <h3>Controls</h3>
+        <!-- Looking Controls -->
+        <div class="look-ctrl zoom in">Zoom In</div>
+        <div class="look-ctrl zoom out">Zoom Out</div>
         <!-- Driving Controls -->
         <div class="tuck-driving drive-ctrl" style="display:none">Tuck Arms</div>
         <svg id="drive-dir-icon" class="drive-ctrl" viewBox="-2 0 36 36" version="1.1" xmlns="http://www.w3.org/2000/svg"></svg>
