--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -52,8 +52,9 @@
   <script type="text/javascript" src="js/tasks/domains/place.js"></script>
   <script type="text/javascript" src="js/tasks/domains/pick-and-place.js"></script>
   <script type="text/javascript" src="js/tasks/domains/realtime-base-selection.js"></script>
-  <script type="text/javascript" src="js/tasks/publish-location.js"></script>
-  <script type="text/javascript" src="js/tasks/param-location.js"></script>
+  <script type="text/javascript" src="js/tasks/get-clicked-pose.js"></script>
+<!--  <script type="text/javascript" src="js/tasks/publish-location.js"></script>
+  <script type="text/javascript" src="js/tasks/param-location.js"></script>-->
   <script type="text/javascript" src="js/tasks/smach-display.js"></script>
   <script type="text/javascript" src="js/tasks/menu.js"></script>
   <script type="text/javascript" src="js/tasks/pointCloudView.js"></script>
