--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -48,6 +48,7 @@
   <script type="text/javascript" src="js/tasks/ee_rotation.js"></script>
   <script type="text/javascript" src="js/tasks/ee_display.js"></script>
   <script type="text/javascript" src="js/tasks/ee_focus.js"></script>
+  <script type="text/javascript" src="js/tasks/servo-open-loop.js"></script>
   <script type="text/javascript" src="js/tasks/domains/pick.js"></script>
   <script type="text/javascript" src="js/tasks/domains/place.js"></script>
   <script type="text/javascript" src="js/tasks/domains/pick-and-place.js"></script>
