--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -76,6 +76,7 @@
   <link type="text/css" href="css/focus.css" rel="stylesheet" />
   <link type="text/css" href="css/undo.css" rel="stylesheet" />
   <link type="text/css" href="css/smach.css" rel="stylesheet" />
+  <link type="text/css" href="css/task-menu.css" rel="stylesheet" />
   
 </head>
 
@@ -101,8 +102,8 @@
      </div>
      <div id="task-menu">
         <h3>Task Menu</h3>
-        <div id="wiping-mouth-adl-button">Wipe Mouth</div>
-        <div id="scratching-knee-adl-button">Scratch Left Knee</div>
+        <div id="wiping-mouth-button" class="task-button">Wipe Mouth</div>
+        <div id="scratching-knee-button" class="task-button">Scratch Left Knee</div>
      </div>
      <div id="controls">
         <h3>Controls</h3>
