--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -52,6 +52,8 @@
   <script type="text/javascript" src="js/tasks/domains/pick-and-place.js"></script>
   <script type="text/javascript" src="js/tasks/domains/wiping-mouth-adl.js"></script>
   <script type="text/javascript" src="js/tasks/domains/scratching-knee-adl.js"></script>
+  <script type="text/javascript" src="js/tasks/domains/wiping-mouth-wheelchair-adl.js"></script>
+  <script type="text/javascript" src="js/tasks/domains/scratching-knee-wheelchair-adl.js"></script>
   <script type="text/javascript" src="js/tasks/publish-location.js"></script>
   <script type="text/javascript" src="js/tasks/param-location.js"></script>
   <script type="text/javascript" src="js/tasks/domains/realtime-base-selection.js"></script>
@@ -103,7 +105,9 @@
      <div id="task-menu">
         <h3>Task Menu</h3>
         <div id="wiping-mouth-button" class="task-button">Wipe Mouth</div>
-        <div id="scratching-knee-button" class="task-button">Scratch Left Knee</div>
+        <div id="scratching-knee-button" class="task-button">Scratch Left Knee</div> 
+        <!-- <div id="wiping-mouth-wheelchair-button" class="task-button">Mouth Wheelchair</div>
+        <div id="scratching-knee-wheelchair-button" class="task-button">Left Knee Wheelchair</div>-->
      </div>
      <div id="controls">
         <h3>Controls</h3>
