new wheelchair stuff. not working

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -106,8 +106,8 @@
         <h3>Task Menu</h3>
         <div id="wiping-mouth-button" class="task-button">Wipe Mouth</div>
         <div id="scratching-knee-button" class="task-button">Scratch Left Knee</div> 
-        <!-- <div id="wiping-mouth-wheelchair-button" class="task-button">Mouth Wheelchair</div>
-        <div id="scratching-knee-wheelchair-button" class="task-button">Left Knee Wheelchair</div>-->
+        <div id="wiping-mouth-wheelchair-button" class="task-button">Mouth Wheelchair</div>
+        <div id="scratching-knee-wheelchair-button" class="task-button">Left Knee Wheelchair</div>
      </div>
      <div id="controls">
         <h3>Controls</h3>
