--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -96,10 +96,17 @@
      </div>
      <div id="task-menu">
         <h3>Task Menu</h3>
-        <div id="wiping-mouth-button" class="task-button">Wipe Mouth</div>
-        <div id="scratching-knee-button" class="task-button">Scratch Left Knee</div> 
-        <div id="wiping-mouth-wheelchair-button" class="task-button">Mouth Wheelchair</div>
-        <div id="scratching-knee-wheelchair-button" class="task-button">Left Knee Wheelchair</div>
+            <form>
+                <select id="task">
+                    <option value="wiping_mouth">Wiping-Mouth</option>
+                    <option value="scratching_left_knee">Scratching-Knee</option>
+                </select>
+                <select id="model">
+                    <option value="autobed">Autobed</div>
+                    <option value="wheelchair">Wheelchair</div>
+                </select>
+            </form>
+        <div id="task-go-button" class="task-button">Go!</div>
      </div>
      <div id="controls">
         <h3>Controls</h3>
