more UI changes

--- a/assistive_teleop/vci-www/vci.html
+++ b/assistive_teleop/vci-www/vci.html
@@ -52,10 +52,7 @@
   <script type="text/javascript" src="js/tasks/domains/pick.js"></script>
   <script type="text/javascript" src="js/tasks/domains/place.js"></script>
   <script type="text/javascript" src="js/tasks/domains/pick-and-place.js"></script>
-  <script type="text/javascript" src="js/tasks/domains/wiping-mouth-adl.js"></script>
-  <script type="text/javascript" src="js/tasks/domains/scratching-knee-adl.js"></script>
-  <script type="text/javascript" src="js/tasks/domains/wiping-mouth-wheelchair-adl.js"></script>
-  <script type="text/javascript" src="js/tasks/domains/scratching-knee-wheelchair-adl.js"></script>
+  <script type="text/javascript" src="js/tasks/domains/adl.js"></script>
   <script type="text/javascript" src="js/tasks/publish-location.js"></script>
   <script type="text/javascript" src="js/tasks/param-location.js"></script>
   <script type="text/javascript" src="js/tasks/domains/realtime-base-selection.js"></script>
@@ -99,7 +96,7 @@
             <form>
                 <select id="task">
                     <option value="wiping_mouth">Wiping-Mouth</option>
-                    <option value="scratching_left_knee">Scratching-Knee</option>
+                    <option value="scratching">Scratching-Knee</option>
                 </select>
                 <select id="model">
                     <option value="autobed">Autobed</div>
